# sockets-brt

./: .gitignore  CMakeLists.txt  main.cpp  socket.hpp  tcpsocket.cpp  tcpsocket.hpp  udpsocket.cpp  udpsocket.hpp
asio-socket/: networkmanager.cpp
servers/: TCP  UDP  rcvserver.cpp  tcpServer  tcpserver.c  tcpserver.cpp  udpServer  udpserver.c
unix-socket/: CMakeLists.txt  main.cpp  networkmanager.cpp  networkmanager.hpp
